# postui

./: Cargo.toml  docker-compose.yml
docs/superpowers/plans/: 2026-05-08-postui-implementation.md  2026-05-11-themes-help-modal.md  2026-05-13-palette-dropdown.md
docs/superpowers/specs/: 2026-05-08-postui-design.md  2026-05-11-themes-help-modal-design.md  2026-05-13-palette-dropdown-design.md
src/: app.rs  cli.rs  config.rs  error.rs  keys.rs  lib.rs  logging.rs  main.rs  term.rs
src/db/: activity.rs  catalog.rs  mod.rs  mutate.rs  query.rs  rows.rs  types.rs
src/ui/: confirm.rs  detail.rs  editor.rs  footer.rs  header.rs  mod.rs  palette.rs  table.rs  theme.rs
src/views/: activity.rs  confirm.rs  connections.rs  databases.rs  help.rs  mod.rs  query.rs  row_detail.rs  rows.rs  schemas.rs  table_inspector.rs  tables.rs  themes.rs
tests/: activity_it.rs  catalog_it.rs  mutate_it.rs  rows_it.rs  view_snapshot.rs
tests/common/: mod.rs
